# src/main/java/br/com/fiap/postech/products/domain/entity/Product.java
@@ -1,0 +1,42 @@
+package br.com.fiap.postech.products.domain.entity;
+
+import java.math.BigDecimal;
+
+public class Product {
+    private Long id;
+
+    private String name;
+
+    private String description;
+
+    private BigDecimal price;
+
+    private Integer stockQuantity;
+
+    public Product(String name, String description, BigDecimal price, Integer stockQuantity) {
+        this.name = name;
+        this.description = description;
+        this.price = price;
+        this.stockQuantity = stockQuantity;
+    }
+
+    public Long getId() {
+        return id;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public String getDescription() {
+        return description;
+    }
+
+    public BigDecimal getPrice() {
+        return price;
+    }
+
+    public Integer getStockQuantity() {
+        return stockQuantity;
+    }
+}
